# log-file-indexing

./: CMakeLists.txt  README.md
include/: InvertedIndex.hxx  LogFile.hxx  search_kmp.hxx  search_naive.hxx  tokenize.hxx
src/: InvertedIndex.cxx  LogFile.cxx  main.cxx  search_kmp.cxx  search_naive.cxx  tokenize.cxx
